--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>My Bad Bong Bong web page add css</h1>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/styles.css">
